# openraft-binlog-replication

./: .env.example  Cargo.toml  Dockerfile  README.md  RFC.md  demo.sh  docker-compose.yml
proto/: raft.proto
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  state_machine.rs  types.rs
src/core/sql/: catalog.rs  engine.rs  error.rs  exec.rs  expr.rs  mod.rs  types.rs
src/shell/: app.rs  grpc.rs  mod.rs  network.rs  server.rs
src/shell/handlers/: api.rs  management.rs  raft.rs
src/shell/sql/: parser.rs
src/shell/store/: log_store.rs  mod.rs  state_machine.rs
