[package]
name = "openraft-binlog-replication"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "binlog-node"
path = "src/main.rs"

[dependencies]
openraft = { version = "0.9.24", features = ["serde", "storage-v2"] }

actix-web = "4"
actix-rt = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

sled = "0.34"
anyerror = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
maplit = "1"
